@startuml
class personaje {
  - nombre : String
  - raza : String
  - vida : int
  - ataque : int
  + estaVivo() : boolean
  + recibirDanio(d:int) : void
  + mejorar() : void
}

class combate {
  + atacar(a:personaje, d:personaje) : double
}

class juego {
  - jugador1 : List<personaje>
  - jugador2 : List<personaje>
  - combate : combate
  + iniciarAleatorio() : void
  + iniciarManual() : void
  - jugar() : void
}

class menu {
  - juego : juego
  + iniciar() : void
}

juego "1" o-- "*" personaje
juego "1" *-- "1" combate
menu --> juego
@enduml
